# libosmio-headers

./: CMakeLists.txt  README.md
include/: core.h  functions.h  libosmio.h  structures.h
include/libosmio/: enums.h  functions.h  handles.h  icd.h  platform.h  structures.h  version.h
